Fixed some troubles

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Nechin\\LaravelHelpers\\FileExtServiceProvider"
+                "Nechin\\LaravelHelpers\\LaravelHelpersServiceProvider"
             ]
         }
     }
